--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.7.2",
+    "uuid": "^9.0.0"
   }
 }
